# mcp-server-box

./: .gitignore  Dockerfile  README.md  claude_desktop_config_sample.json  pyproject.toml  requirements.txt
src/: box_api.py  mcp_server_box.py
src/lib/: box_api.py  box_auth_callback.py  box_authentication.py
tests/: conftest.py  test_box_api_ai.py  test_box_api_basic.py  test_box_api_file_ops.py  test_box_api_folder_ops.py  test_box_api_read.py  test_box_api_search.py  test_box_auth.py  test_mcp_server.py
