[project]
name = "mcp-server-box"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "box-ai-agents-toolkit>=0.0.42",
    "box-sdk-gen>=1.13.0",
    "mcp[cli]>=1.6.0",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = ["pytest>=8.3.5", "pytest-asyncio>=0.26.0", "pytest-cov>=6.1.0"]
